--- a/app/routing/package.json
+++ b/app/routing/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "path": "^0.12.7"
+    "express-handlebars": "^3.0.0",
+    "handlebars": "^4.0.11",
+    "nodemon": "^1.17.1",
+    "path": "^0.12.7",
+    "process-env": "^1.1.0"
   }
 }
